<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/reservation_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_lot_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/start_month_and_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"


            android:paddingTop="10dp"
            android:text="@string/deleteDialogTitle"

            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/card_lot_item"
            app:layout_constraintTop_toTopOf="@+id/card_lot_item" />

        <TextView
            android:id="@+id/textDeleteDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"

            android:text="@string/deleteDialogText"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_month_and_year" />


        <EditText
            android:id="@+id/authCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/deleteDialogHint"
            android:inputType="textPassword"

            android:textColor="@color/black"
            android:textColorHint="@color/grey"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDeleteDialog" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1dp"

            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/deleteDialogDeleteButton"
            android:textColor="@color/black"

            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authCode" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:layout_marginHorizontal="15dp"

            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/deleteDialogCancel"

            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteButton"
            app:layout_constraintTop_toBottomOf="@+id/authCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
