<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/layout_delete_dialog"
    android:layout_width="match_parent"
    android:layout_height="220dp"

    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="15dp"
    android:layout_marginHorizontal="17.5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_lot_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/start_month_and_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"


            android:paddingTop="10dp"
            android:text="@string/deleteDialogTitle"

            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/card_lot_item"
            app:layout_constraintTop_toTopOf="@+id/card_lot_item" />

        <TextView
            android:id="@+id/start_day"
            android:layout_width="320dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:text="@string/deleteDialogText"

            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_month_and_year" />

        <EditText
            android:inputType="textPassword"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/deleteDialogHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_day" />


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="82dp"
            android:layout_height="50dp"

            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/white"

            android:text="@string/deleteDialogOk"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="12sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/okButton"
            android:layout_width="82dp"
            android:layout_height="50dp"

            android:layout_marginHorizontal="15dp"


            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/deleteDialogDeleteButton"

            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
