<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fatherLayout"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_700"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    >

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/elipse_1"
        app:layout_constraintStart_toStartOf="@+id/fatherLayout"
        app:layout_constraintBottom_toBottomOf="@id/fatherLayout"
        app:layout_constraintTop_toTopOf="@id/fatherLayout"
        />

    <TextView
        android:id="@+id/spot_number"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@+id/ellipse_1"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"
        app:layout_constraintTop_toTopOf="@+id/ellipse_1"
        app:layout_constraintEnd_toEndOf="@id/ellipse_1"
        android:text="1"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/ellipse_1"
        app:layout_constraintStart_toEndOf="@id/ellipse_1"
        android:paddingHorizontal="10dp"
        android:text="@string/day"
        android:textSize="14dp"
        android:textStyle="bold"
        android:gravity="center"
    />
    <TextView
        android:id="@+id/month_and_year"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/ellipse_1"
        app:layout_constraintStart_toEndOf="@id/day"
        android:text="@string/month_and_year"
        android:textSize="14dp"
        android:textStyle="bold"
        android:gravity="center"
    />
    <TextView
        android:id="@+id/hour_of_day"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@id/ellipse_1"
        app:layout_constraintStart_toEndOf="@id/ellipse_1"
        android:paddingHorizontal="10dp"
        android:text="@string/hour_of_day"
        android:textSize="14dp"
        android:gravity="center"
    />

</androidx.constraintlayout.widget.ConstraintLayout>