<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    tools:context=".view.MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotationX="6"
            tools:layout_editor_absoluteX="16dp"
        >


            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/blue"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/lot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:text="@string/addReservation"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar_layout"
                app:layout_constraintStart_toEndOf="@+id/backButton"
                app:layout_constraintTop_toTopOf="@+id/toolbar_layout"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <!-- parking lot -->

    <TextView
        android:id="@+id/lotListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected lot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.147" />

    <Spinner
        android:id="@+id/lotListButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"

        android:paddingStart="16dp"
        android:textSize="20sp"

        android:contentDescription="@string/spinner_content"

        android:spinnerMode="dropdown"
        app:flow_maxElementsWrap="6"
        app:barrierMargin="10dp"

        android:background="@drawable/spinner_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lotListText"

        tools:listitem="@layout/layout_drop_down_item"
        />

    <!-- Start date and time -->

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text="Selected time"
        app:layout_constraintEnd_toEndOf="@+id/startDateButton"
        app:layout_constraintTop_toBottomOf="@+id/lotListButton" />

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected time "
        app:layout_constraintBottom_toBottomOf="@+id/startDateText"
        app:layout_constraintEnd_toStartOf="@+id/startDateText"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        app:layout_constraintBottom_toBottomOf="@+id/startDateButton"
        app:layout_constraintEnd_toEndOf="@+id/startDateButton"
        app:layout_constraintTop_toTopOf="@+id/startDateButton"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        />

    <EditText
        android:id="@+id/startDateButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/spinner_background"
        android:clickable="false"

        android:focusable="false"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/startDateTimeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <!-- End date and time -->

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text=" Selected time "
        app:layout_constraintEnd_toEndOf="@+id/startDateButton"
        app:layout_constraintTop_toBottomOf="@+id/startDateButton" />

    <TextView
        android:id="@+id/endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected time "
        app:layout_constraintBottom_toBottomOf="@+id/endDateText"
        app:layout_constraintEnd_toStartOf="@+id/startDateText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"

        app:layout_constraintBottom_toBottomOf="@+id/endDateTimeButton"
        app:layout_constraintEnd_toEndOf="@+id/endDateTimeButton"
        app:layout_constraintTop_toTopOf="@+id/endDateTimeButton"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        />

    <EditText
        android:id="@+id/endDateTimeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/endDateTimeEditText"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <!-- Authorization Code -->
    <TextView
        android:id="@+id/authorizationCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selected Code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateTimeButton" />

    <EditText
        android:id="@+id/authorizationCodeButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/authorizationEditText"
        android:background="@drawable/spinner_background"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorizationCodeText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>