<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parkingLotLayout"
    tools:context=".view.MainActivity"
>

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alegreya_sans_sc_extrabold_italic"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:text="@string/title_ParkingApp"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold"
        />
    </Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/progress_bar_drawable"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        style="?android:attr/progressBarStyleHorizontal"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="200dp"
        android:padding="10dp"
        android:max="30"
        android:progress="38"
    />

    <TextView
        android:id="@+id/numberBusyPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        android:paddingStart="30dp"
        android:text="0"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/busyPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toEndOf="@+id/numberBusyPlaces"
        android:paddingStart="5dp"
        android:paddingBottom="10dp"
        android:text="@string/busyPlaces"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/numberFreePlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toStartOf="@+id/freePlaces"
        android:paddingEnd="5dp"
        android:text="30"
        android:textStyle="bold"
    />

    <TextView
        android:id="@+id/freePlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/progressBar"
        android:paddingEnd="30dp"
        android:text="@string/freePlaces"
        android:textStyle="bold"
    />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/busyPlaces" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingAddButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="70dp"
        android:backgroundTint="@color/blue"
        app:srcCompat="@android:drawable/ic_menu_add"
        />

</androidx.constraintlayout.widget.ConstraintLayout>